--- a/python/Graph.ipynb
+++ b/python/Graph.ipynb
@@ -54,6 +54,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "021919ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH = \"DataConfig.dat\"\n",
+    "config = np.loadtxt(PATH, skiprows = 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "70ed1b2d",
    "metadata": {},
