--- a/Latex/Магистратура/Диплом/preamble.inc.tex
+++ b/Latex/Магистратура/Диплом/preamble.inc.tex
@@ -12,7 +12,8 @@
 \pgfplotsset{compat=1.9}
 
 \usepackage[english,russian]{babel} %языковые пакеты
-\usepackage{mathtext,amsmath,unicode-math,empheq}
+%\usepackage{mathtext,amsmath,unicode-math,empheq}
+\usepackage{amsmath,unicode-math,empheq} %на линуксе нет mathtext
 
 \usepackage[utf8]{inputenc}%кодировка шрифта utf-8
 \usepackage{fontenc} %шрифты
@@ -34,7 +35,7 @@
 %
 
 \usepackage{cancel}%зачеркивания в формулах
-\usepackage{icomma}%умная запятая
+%\usepackage{icomma}%умная запятая
 \usepackage[bookmarks=true, colorlinks=true,unicode=true,urlcolor=black,linkcolor=black, anchorcolor=black,citecolor=black,menucolor=black, filecolor=black]{hyperref}%гиперссылки
 
 \usepackage[includeheadfoot=true]{geometry}%параметры страницы
