--- a/Latex/Магистратура/Диплом/diptex.tex
+++ b/Latex/Магистратура/Диплом/diptex.tex
@@ -310,7 +310,7 @@
 	\label{fig:fdtd_3d}
 \end{figure}
 
-Для приведения численной схемы к требуемой в данной задаче, необходимо убрать зависимость от $z$, и представить зависимость от $\varphi$ как \eqref{eq:razdel_per}. То есть сетка визуально будет выглядеть одномерно, в расчетах будет использоваться одномерная зависимость поля и токов от $r$, однако на самом деле сетка будет являться двумерной, но с заданной зависимостью от одной из переменных. Это объясняет наличие в точках с половинчатым шагом $r=r\left(N+1/2\right)$, сразу двух компонент $H_{z}$ и $E_{r}$ с учетом того, что для разделения переменных и написании разностной схемы необходимо <<разнести>> в пространстве все исследуемые компоненты. Стоит отметить, что по причине разделения компонент в пространстве необходимо аналогичным образом разделить и временную сетку, то есть расчет фактически ведётся по половине шага, с чередованием рассчитываемых полей, аналогично расчетам по пространству.
+Для приведения численной схемы к требуемой в данной задаче, необходимо убрать зависимость от $z$, и представить зависимость от $\varphi$ как \eqref{eq:razdel_per}. То есть сетка визуально будет выглядеть одномерно, в расчетах будет использоваться одномерная зависимость поля и токов от $r$, однако на самом деле сетка будет являться двумерной, но с заданной зависимостью от одной из переменных. Это объясняет наличие в точках с половинчатым шагом $r=r\left(N+1/2\right)$, сразу нескольких компонент $E_{r}, E_{\varphi}, \text{ и } H_{z}$, и аналогично в точках $r=r\left(N\right)$ оставшихся трёх составляющих поля, с учетом того, что для разделения переменных и написании разностной схемы необходимо <<разнести>> в пространстве все исследуемые компоненты. Стоит отметить, что по причине разделения компонент в пространстве необходимо аналогичным образом разделить и временную сетку, то есть расчет фактически ведётся по половине шага, с чередованием рассчитываемых полей, аналогично расчетам по пространству.
 \begin{figure}[H]\centering
 	\include{pics/fdtd_1d.tex}
 	\caption{Одномерная сетка (проекция трёхмерной сетки на ось $Or$) для цилиндрической СК.}
@@ -384,7 +384,7 @@
 	\end{equation*}\newpage  
 	\begin{equation*}
 		\begin{cases*}
-			\left.E_{r}\right|_{i+\frac{1}{2}}=\left.E_{r}\right|_{i+\frac{1}{2}}+\frac{\Delta\xi}{\sin^{2}\theta}\left(\frac{\left.H_{z}\right|_{i+\frac{1}{2}}}{r}+\frac{\cos\theta}{\Delta r}\left(\left.E_{z}\right|_{i+1}-\left.E_{z}\right|_{i}\right)-\frac{4\pi}{c}\left.j_{r}\right|_{i+\frac{1}{2}}\right)\\	\left.E_{\varphi}\right|_{i}=\left.E_{\varphi}\right|_{i}+\frac{\Delta\xi}{\sin^{2}\theta}\left[-\frac{\cos\theta}{r}\left.E_{z}\right|_{i}-\frac{1}{\Delta r}\left(\left.H_{z}\right|_{i+\frac{1}{2}}-\left.H_{z}\right|_{i-\frac{1}{2}}\right)-\frac{4\pi}{c}\left.j_{\varphi}\right|_{i} \right]\\
+			\left.E_{r}\right|_{i+\frac{1}{2}}^{n+1}=\left.E_{r}\right|_{i+\frac{1}{2}}^{n}+\frac{\Delta\xi}{\sin^{2}\theta}\left(\frac{\left.H_{z}\right|_{i+\frac{1}{2}}^{n+\frac{1}{2}}}{r}+\frac{\cos\theta}{\Delta r}\left(\left.E_{z}\right|_{i+1}^{n+\frac{1}{2}}-\left.E_{z}\right|_{i}^{n+\frac{1}{2}}\right)-\frac{4\pi}{c}\left.j_{r}\right|_{i+\frac{1}{2}}^{n}\right)\\	\left.E_{\varphi}^{n+\frac{1}{2}}\right|_{i}=\left.E_{\varphi}\right|_{i}^{n-\frac{1}{2}}+\frac{\Delta\xi}{\sin^{2}\theta}\left[-\frac{\cos\theta}{r}\left.E_{z}\right|_{i}-\frac{1}{\Delta r}\left(\left.H_{z}\right|_{i+\frac{1}{2}}-\left.H_{z}\right|_{i-\frac{1}{2}}\right)-\frac{4\pi}{c}\left.j_{\varphi}\right|_{i} \right]\\
 			\left.E_{z}\right|_{i}=\left.E_{z}\right|_{i}+\frac{c\Delta\xi}{r}\left(\frac{\left.rH_{\varphi}\right|_{i+\frac{1}{2}}-\left.rH_{\varphi}\right|_{i-\frac{1}{2}}}{\Delta r}-\left.H_{r}\right|_{i}\right)-\left.4\pi\Delta\xi j_{z}\right|_{i}\\
 			\left.H_{r}\right|_{i}=\left.H_{r}\right|_{i}+\frac{\Delta\xi}{\sin^{2}\theta}\left[\frac{\left.E_{z}\right|_{i}}{r}+\cos\theta\left(\frac{\left.H_{z}\right|_{i+\frac{1}{2}}-\left.H_{z}\right|_{i-\frac{1}{2}}}{\Delta r}+\frac{4\pi}{c}\left.j_{r}\right|_{i}\right)\right]\\
 			\left.H_{\varphi}\right|_{i+\frac{1}{2}}=\left.H_{\varphi}\right|_{i+\frac{1}{2}}+\frac{\Delta\xi}{\sin^{2}\theta}\left[\cos\theta\left(\frac{\left.H_{z}\right|_{i+\frac{1}{2}}}{r}-\frac{4\pi}{c}\left.j_{r}\right|_{i+\frac{1}{2}}\right)+\frac{\left.E_{z}\right|_{i+1}-\left.E_{z}\right|_{i}}{\Delta r}\right]\\
